[tool.poetry]
name = "bettertogether"
version = "0.0.1"
description = "Bruteforce WIFI login page of Better Together."
authors = ["oskar"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
